# redmine-loader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/redmine_loader/: __init__.py  loader.py  models.py
tests/test_loader/: conftest.py  test_redmine_loader.py
tests/test_loader/issues/1/: attachment.txt  issues.json
