[tool.poetry]
name = "redmine-loader"
version = "0.0.5"
description = "Document Loader for bitnami Redmine. Crawl Redmine Issues using WebAPI and gather issue subject, description, comments, attachments. Attachments are parsed with unstructured.io ."
authors = ["syakesaba <pakemon@syakesaba.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<=3.12"
httpx = "^0.27.2"
pydantic = "^2.9.2"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
unstructured = "^0.15.12"
langchain-unstructured = {extras = ["local-inference"], version = "^0.1.4"}

[tool.poetry.dev-dependencies]
python = "^3.11,<=3.12"
poetry = "^1.8.3"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
build = "^1.2.2"
httpx = "^0.27.2"
pydantic = "^2.9.2"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
unstructured = "^0.15.12"
langchain-unstructured = {extras = ["local-inference"], version = "^0.1.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
